--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <title>NLW Esports</title>
     </head>
     <body>
-        <!-- <header>
+        <header>
             <div>
                 <img
                 src="https://github.com/dscarv27.png" 
                 alt="foto de Daniel Carvalho usando uma blusa vermelha e em frente a uma porta azul"
                 / >            
             </div>
-        </header> -->
+        </header>
         <main>
 
             <section>
